[gd_scene load_steps=5 format=3 uid="uid://cjod8aa62gw68"]

[ext_resource type="Script" path="res://script/menu_start.gd" id="1_43edc"]
[ext_resource type="Texture2D" uid="uid://cx1olycmynrfd" path="res://asset/GUI/menu_start.jpg" id="1_rqw4s"]
[ext_resource type="PackedScene" uid="uid://dbu1ynp07orml" path="res://scene/save_load.tscn" id="3_8eq13"]
[ext_resource type="AudioStream" uid="uid://b3rswav83e3an" path="res://sound/pickupCoin.wav" id="4_yi0ew"]

[node name="menu_start" type="Node2D"]
script = ExtResource("1_43edc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(580, 327)
scale = Vector2(0.45, 0.45)
texture = ExtResource("1_rqw4s")

[node name="Button" type="Button" parent="."]
offset_left = 439.0
offset_top = 175.0
offset_right = 733.0
offset_bottom = 290.0
flat = true

[node name="Button2" type="Button" parent="."]
offset_left = 437.0
offset_top = 312.0
offset_right = 729.0
offset_bottom = 431.0
flat = true

[node name="Button3" type="Button" parent="."]
offset_left = 437.0
offset_top = 446.0
offset_right = 726.0
offset_bottom = 564.0
flat = true

[node name="save_load" parent="." instance=ExtResource("3_8eq13")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yi0ew")
volume_db = -15.0
bus = &"SFX"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
